# govhack-2024-patrick-and-gang

./: .gitignore  LICENSE  Makefile  content_check.py  pyproject.toml  readme.md
notebooks/: data_analysis.ipynb
src/: app.py  content_check.py  content_creator.py  data_loader.py  main.py  text_to_speech.py  translator.py
src/models/: ml_model.py
src/openai_response/: input.txt  prompt.txt  test_res1.json
src/raw_data/: clean_energy.txt  summary.txt
src/routers/: prediction.py
src/utils/: llm_openai.py
